syntax = "proto3";

option csharp_namespace = "Measurements.Grpc";

package measurements;

service MeasurementService {
  rpc MeasurementSetByID (MeasurementSetRequest) returns (MeasurementSetModel);
  rpc MeasurementAllSetsByDay (MeasurementSetByDateRequest) returns (stream MeasurementSetModel);
  rpc MeasurementAllSetsByWeek (MeasurementSetByDateRequest) returns (stream MeasurementSetModel);
  rpc MeasurementAllSetsByMonth (MeasurementSetByDateRequest) returns (stream MeasurementSetModel);
  rpc MeasurementSetsByDay (MeasurementSetFromDeviceByDateRequest) returns (stream MeasurementSetModel);
  rpc MeasurementSetsByWeek (MeasurementSetFromDeviceByDateRequest) returns (stream MeasurementSetModel);
  rpc MeasurementSetsByMonth (MeasurementSetFromDeviceByDateRequest) returns (stream MeasurementSetModel);
}

message MeasurementSetByDateRequest {
  string date = 1;
}

message MeasurementSetFromDeviceByDateRequest {
  string device_number = 1;
  string date = 2;
}

message MeasurementSetRequest {
  string id = 1;
}

message MeasurementModel {
  double value = 1;
  string unit = 2;
}

message MeasurementSetModel {
  string id = 1;
  string device_number = 2;
  string register_date = 3;

  optional MeasurementModel temperature = 4;
  optional MeasurementModel humidity = 5;
  optional MeasurementModel co2 = 6;
  optional MeasurementModel voc = 7;
  optional MeasurementModel particulate_matter1 = 8;
  optional MeasurementModel particulate_matter2v5 = 9;
  optional MeasurementModel particulate_matter10 = 10;
  optional MeasurementModel formaldehyde = 11;
  optional MeasurementModel co = 12;
  optional MeasurementModel o3 = 13;
  optional MeasurementModel ammonia = 14;
  optional MeasurementModel airflow = 15;
  optional MeasurementModel air_ionization_level = 16;
  optional MeasurementModel o2 = 17;
  optional MeasurementModel radon = 18;
  optional MeasurementModel illuminance = 19;
  optional MeasurementModel sound_level = 20;
}
