syntax = "proto3";

option csharp_namespace = "Measurements.GRPCServer";

package measurements;

service MeasurementService {
	rpc MeasurementsQuery (MeasurementsQueryRequest) returns (stream MeasurementGrpcModel);
}

message MeasurementsQueryRequest {
    string sort_order = 1;
    optional string start_date = 2;
    optional string end_date = 3;

    repeated string device_numbers = 4;
    repeated string location_hashes = 5;
}

message MeasurementGrpcModel {
	string id = 1;
	string device_number = 2;
	string measurement_capture_date = 3;
	string location_hash = 4;

	optional double temperature = 5;
	optional double humidity = 6;
	optional double co2 = 7;
	optional double voc = 8;
	optional double particulate_matter1 = 9;
	optional double particulate_matter2v5 = 10;
	optional double particulate_matter10 = 11;
	optional double formaldehyde = 12;
	optional double co = 13;
	optional double o3 = 14;
	optional double ammonia = 15;
	optional double airflow = 16;
	optional double air_ionization_level = 17;
	optional double o2 = 18;
	optional double radon = 19;
	optional double illuminance = 20;
	optional double sound_level = 21;
}